kotlin-parser/src/test/semlang/validatorTests/fail/structs1.sem
// Double definition of same struct name, same contents

struct Foo {
  a: Integer
}

struct Foo {
  a: Integer
}
